data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2544.wast
;; 5. **Function Call Followed by Branch Out of Block:**    - **Test Description:** Implement a function call within a block that is directly followed by a branch (`br`) targeting an outer block.    - **Constraint Checked:** Accurate management of control flow and label indexing for branching after a function call.    - **Relation to Improper Function Handling:** Verify control flow integrity when branching occurs immediately after a function call in a block.

(assert_invalid
  (module 
    (func $test_func (param i32) (result i32)
      local.get 0
    )
    (func $block-test 
      (block $outer
        (block $inner
          (call $test_func (i32.const 42))
          (br 1)
        )
        (drop)
      )
    )
  )
  "type mismatch"
)